Issue with extra space on right hand side fixed

--- a/client/src/scss/components/_Header.scss
+++ b/client/src/scss/components/_Header.scss
@@ -1,6 +1,5 @@
 .header {
   grid-area: header;
-  min-width: 100%;
   background-color: $main-brand-color;
 
   @include multi-column-layout {
